--- a/css/create-account.css
+++ b/css/create-account.css
@@ -54,7 +54,7 @@ img{
     text-align: center;
 }
 
-.loginLink{
+.createLink{
     border-bottom: 1px solid white;
     padding-bottom: 0.5rem;
 }
@@ -75,13 +75,13 @@ img{
     text-align: center;
 }
 
-.loginForm{
+.createForm{
     display: grid;
     grid-template-columns: 1fr;
     gap: 0.5rem;
 }
 
-.loginButton button{
+.createButton button{
     background-color: #89023E;
     color: white;
     border-radius: 15px;
@@ -89,25 +89,21 @@ img{
     border-style: none;
 }
 
-.loginButton button:hover{
+.createButton button:hover{
     background-color: #FFD9DA;
     color: black;
 }
 
-.loginButton{
+.createButton{
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.forgotPass li{
-    list-style: none;
 }
 
 .googleButton button, .facebookButton button{
     color: #30343F;
 }
 
-.password input, .email input{
+.password input, .email input, .confirmPassword input{
     color: #30343F;
 }
