--- a/templates/booking-cards-template.html
+++ b/templates/booking-cards-template.html
@@ -18,6 +18,7 @@
                     onclick="bookingComfirmed(this.parentElement.parentElement.parentElement.getAttribute('data-uid'))">Accept</button>
                 <button
                     onclick="bookingDeclined(this.parentElement.parentElement.parentElement.getAttribute('data-uid'))">Decline</button>
+                <button class="chat-button">Chat</button>
             </div>
         </div>
     </div>
