--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,273 +1,388 @@
 body {
-    font-family: Georgia, "Times New Roman", Times, serif;
-    background-color: grey;
-    padding: 1rem;
-    /* color: #ccc; */
-  }
+  font-family: oswald;
+  background-color: rgb(211, 208, 208);
+  /* color: #ccc; */
+  padding: 0;
+  margin: 0;
+}
+
+/* HEADER ===============  */
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #89023e;
+  padding: 20px;
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
+}
+.logo {
+  border: 2px dotted;
+  border-radius: 50%;
+  width: 50px;
+  padding: 8px;
+  text-align: center;
+  color: white;
+}
+header nav ul {
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+  text-transform: uppercase;
+  font-family: oswald;
+  font-weight: 700;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
   
-  /* HEADER ===============  */
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
-    padding: 20px;
-    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
-  }
-  .logo {
-    border: 2px dotted;
-    border-radius: 50%;
-    width: 50px;
-    padding: 8px;
-    text-align: center;
-  }
-  header nav ul {
-    list-style: none;
-    display: flex;
-    gap: 1rem;
-  
-    margin: 0;
-    padding: 0;
-  }
-  header nav ul li {
-    border: 1px solid black;
-    padding: 4px;
-    border-radius: 8px;
-  }
-  
-  /* HERO SECTION ================= */
-  
-  .hero {
-    background-color: #e0e0e0;
-    padding: 50px 20px;
-  }
-  .hero-container {
-    display: grid;
-  }
-  .hero-grid {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    gap: 20px;
-    justify-items: center;
-    align-items: center;
-    text-align: center;
-  }
-  
-  .hero-logo {
-    grid-column: 1 / 4;
-    grid-row: 1 / 2;
-    text-align: center;
-  }
-  
-  .hero-title {
-    grid-column: 4 / 6;
-    grid-row: 2 / 3;
-    text-align: left;
-  }
-  
-  .hero-play-icon {
-    grid-column: 6 / 7;
-    grid-row: 2 / 4;
-    font-size: 50px;
-    align-self: center;
-  }
-  
-  .hero-quick-info {
-    grid-column: 7 / 9;
-    grid-row: 3 / 4;
-  }
-  
-  .hero-search-bar {
-    display: grid;
-    grid-column: 1 / 7;
-    grid-row: 4 / 5;
-    width: auto;
-    margin: 0;
-    padding: 1rem 1rem;
-  }
-  
-  .hero-search-bar input {
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-shadow: none;
-  }
-  
-  .hero .quick-info p {
-    margin: 5px 0;
-    font-size: 16px;
-  }
-  
-  .search-bar {
-    margin: 20px 0;
-  }
-  
-  .search-bar input {
-    width: 80%;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  main {
-    display: grid;
-  }
-  .cta-section {
-    display: flex;
-    justify-content: space-around;
-    padding: 40px 20px;
-    background-color: #fff;
-    margin: 20px 0;
-  }
-  
-  .cta {
-    text-align: center;
-    width: 45%;
-    background-color: #f0f0f0;
-    padding: 20px;
-    border-radius: 8px;
-  }
-  
-  .cta .cta-image {
+}
+header nav ul li {
+  padding: 4px;
+  border-radius: 8px;
+}
+header nav ul a {
+text-decoration: none;
+color: white;
+}
+/* HERO SECTION ================= */
+
+.hero {
+  /* background-color: #e0e0e0; */
+  padding: 50px 20px;
+}
+
+.hero {
+  position: relative;
+    height: 50vh;
     width: 100%;
-    height: 100px;
-    background-color: #ccc;
-    margin-bottom: 20px;
-  }
-  
-  .cta button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    background-color: #333;
-    color: #fff;
-  }
-  
-  .signup-section {
-    text-align: center;
-    padding: 20px;
-    background-color: #e0e0e0;
-    margin: 20px 0;
-  }
-  
-  .signup-section p {
-    margin: 10px 0;
-  }
-  /* FEATURED ARTIST ========== */
-  .featured-artists {
-    padding: 0.2rem 8rem;
-  }
-  .featured-artists h2 {
-    margin-bottom: 20px;
-    font-size: 32px;
-  }
-  
-  .artist-card {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    align-items: center;
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 8px;
-    margin-bottom: 20px;
-  }
-  
-  .artist-card .artist-info {
-    padding-right: 20px;
-  }
-  
-  .artist-card .artist-info h3 {
-    margin: 0;
-  }
-  
-  .artist-card .artist-info p {
-    margin: 5px 0;
-  }
-  .artist-button {
-    padding-bottom: 20px;
-  }
-  .artist-card button {
-    justify-self: end;
-    /* align-self: flex-end; */
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    background-color: #333;
-    color: #fff;
-  }
-  
-  .artist-card .artist-image {
-    display: grid;
-    justify-self: center;
-    width: 100px;
-    height: 100px;
-    background-color: #ccc;
-    /* border-radius: 50%; */
-  }
-  /* FEATURED VIDEO =============== */
-  .featured-videos {
-    padding: 20px;
-    background-color: #fff;
-  }
-  
-  .featured-videos h2 {
-    margin-bottom: 20px;
-    font-size: 24px;
-  }
-  
-  .video-card {
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    align-items: center;
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 8px;
-    margin-bottom: 20px;
-  }
-  
-  .video-card .video-info {
-    padding-right: 20px;
-  }
-  
-  .video-card .video-info h3 {
-    margin: 0;
-  }
-  
-  .video-card .video-info p {
-    margin: 5px 0;
-  }
-  
-  .video-card .video-icon {
-    width: 100px;
-    height: 100px;
-    background-color: #ccc;
-    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
+}
+video {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -10;
+}
+.video-container {
+  display: grid;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: 0;
+}
+.hero-text-container {
+  display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: end;
+    height: fit-content;
+    align-self: end;
+    .hero-text h3 {
+      grid-column: 1/2;
+      grid-row: 1/2;
+      align-self: flex-end;
+      font-size: 20px;
+
+
+    }
+    .hero-text p {
+      font-size: 18px;
+    }
+h3, p {
+  font-family: oswald;
+  color: white;
+  text-transform: uppercase;
+  align-self: end;
+
+}
+.hero-text{
+  background-color: rgba(0, 0, 0, 0.7);
+  border: 1px;
+  border-radius: 8px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  width: fit-content;
+  
+}
+}
+
+
+.video-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  /* z-index: -1; */
+}
+
+
+.hero-search-bar {
+  width: 90%;
+  margin: 0 auto;
+  padding: 1rem 1rem;
+  background-color: #333;
+
+}
+
+.hero-search-bar input {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  box-shadow: none;
+  width: 100%;
+  text-align: center;
+}
+
+
+.search-bar input {
+  width: 80%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+main {
+  /* display: grid; */
+  gap: 1rem;
+  background-color: #1b2021;
+}
+.book-create-container {
+  display: flex;
+  justify-content: 
+  space-around;
+  /* height: 16rem; */
+  padding: 40px 20px;
+  background-color: #111111;
+  margin: 20px 0;
+}
+
+.book-container, .create-container {
+  text-align: center;
+  width: 45%;
+  background-color: #f0f0f0;
+  padding: 20px;
+  justify-items: center;
+  border-radius: 8px;
+
+  background-image: url(https://picsum.photos/1200/500?random=1);
+}
+
+.book-text, .create-text {
+  display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 8rem;
+    align-content: space-between;
+    align-items: end;
+  
+    justify-items: end;
+    color: white
+    ;
+}
+
+ button {
+  width: fit-content;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  background-color: #333;
+  color: #fff;
+}
+
+.signup-section {
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+}
+.sign-up, .sign-up a {
+  color: #f37f81;
+}
+.signup-section p {
+  margin: 10px 0;
+}
+/* FEATURED ARTIST ========== */
+.featured-artists {
+
+  display: grid;
+  justify-content: center;
+  padding: 0.2rem 8rem;
+  padding: 10px;
+  justify-self: center;
+  width: auto
+}
+.featured-artists h2 {
+  /* margin-bottom: 20px; */
+  font-size: 32px;
+  color: white;
+}
+
+.artist-card {
+  display: flex;
+  /* flex-wrap: row wrap; */
+  /* align-items: center; */
+  background-color: #f9f9f9;
+  width: fit-content;
+  padding: 20px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+.artist-card .artist-info {
+  padding-right: 20px;
+  
+}
+
+.artist-card .artist-info h3 {
+  margin: 0;
+}
+
+.artist-card .artist-info p {
+  margin: 5px 0;
+}
+.artist-button {
+  padding-bottom: 20px;
+}
+.artist-card button {
+  justify-self: end;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  background-color: #333;
+  color: #fff;
+}
+
+.artist-card .artist-image {
+  
+  justify-self: center;
+  border-radius: 10px;
+ 
+}
+
+.featured-artists, .featured-videos {
+  max-width: auto;
+}
+/* FEATURED VIDEO =============== */
+.featured-videos {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns:1fr 1fr;
+  padding: 20px;
+  
+}
+
+.featured-videos h2 {
+  margin-bottom: 20px;
+  grid-column: 1/-1;
+  justify-items: center;
+  font-size: 24px;
+}
+
+.video-card-1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+}
+
+.video-card-2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+
+}
+.video-video {
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.video-info {
+  padding: 20px;
+}
+
+.video-card .video-info h3 {
+  margin: 0;
+}
+
+/* .video-card .video-info p {
+  margin: 5px 0;
+} */
+
+/* .video-card .video-icon {
+  width: 100px;
+  height: 100px;
+  background-color: #ccc;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+} */
+
+.video-card .video-icon i {
+  font-size: 24px;
+}
+
+/* FOOTER ========== */
+footer {
+  background-color: #89023e;
+}
+.footer-nav ul {
+  display: flex;
+  /* align-items: flex-end; */
+  list-style-type: none;
+  gap: 6rem;
+  justify-content: flex-end;
+  padding-left: 15rem;
+  padding-right: 10rem;
+}
+.footer-nav ul a {
+  color: white;
+}
+
+@media screen and (max-width: 760px) {
+.body {
+  width: auto;
+}
+  main {
+    display: grid;
   }
-  
-  .video-card .video-icon i {
-    font-size: 24px;
+
+  .hero-text h3 {
+    display: none;
   }
-  
-  /* FOOTER ========== */
-  
+  .featured-artists, .featured-videos {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 0.5rem;
+    background-color: #333;
+    justify-content: center;
+  }
+  footer {
+    display: none;
+  }
+  .footer-nav {
+    display: flex;
+  }
   .footer-nav ul {
     display: flex;
-    align-items: flex-end;
+    flex-wrap: row wrap;
+    justify-content: center;
+
+    display: flex;
     list-style-type: none;
-    gap: 2rem;
-    justify-content: flex-end;
-    padding-right: 15rem;
   }
-  .footer-nav ul a {
-    text-decoration: none;
-  }
-  
+}
