--- a/css/homepage.css
+++ b/css/homepage.css
@@ -15,3 +15,17 @@ main {
     cursor: pointer;
     font-weight: bold;
 }
+
+#portfolioBtn {
+    padding: 10px;
+    margin-top: 20px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+#user {
+    font-size: 1.5rem;
+    text-transform: capitalize;
+    font-weight: bold;
+    color: tomato;
+}
