--- a/css/user-info.css
+++ b/css/user-info.css
@@ -49,7 +49,7 @@ main {
     align-items: center;
 }
 
-#captureBtn {
+#imageInput {
     width: 30%;
     text-align: center;
 }
@@ -58,4 +58,15 @@ main {
     width: 150px;
     height: 150px;
     border-radius: 150px;
+}
+
+#portfolio-images {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 0.25rem;
+}
+
+#portfolio-images img {
+    width: 100px;
+    height: 100px;
 }
