--- a/css/component-header-mob.css
+++ b/css/component-header-mob.css
@@ -39,7 +39,7 @@ nav{
 }
 
 header{
-    background:var(--primary-clr);
+    background:var(--gradient);
     border-radius: 0 0 20px 20px;
 
     padding: 1rem;
