--- a/css/artist-portfolio.css
+++ b/css/artist-portfolio.css
@@ -16,9 +16,12 @@ main {
     text-align: start;
     margin-top: 5rem;
 }
-
-#saveBtn {
-    grid-column: 1/-1;
+.booking-request {
+    display: grid;
+    grid-template-columns: 20% 1fr;
+    gap: 0.75rem;
+    text-align: center;
+    margin-top: 5rem;
 }
 
 .label {
@@ -39,6 +42,15 @@ main {
     margin-top: 20px;
     cursor: pointer;
     font-weight: bold;
+    grid-column: 1/-1;
+}
+
+#chatBtn {
+    padding: 10px;
+    margin-top: 20px;
+    cursor: pointer;
+    font-weight: bold;
+    grid-column: 1/-1;
 }
 
 .user-avatar {
@@ -70,3 +82,4 @@ main {
     width: 100px;
     height: 100px;
 }
+
