--- a/css/dashboard-event-planner.css
+++ b/css/dashboard-event-planner.css
@@ -96,7 +96,6 @@ main{
     gap: 2rem;
 }
 
-eventPlannerInfo
 .artistCard{
     box-shadow: 5px 5px 10px 5px #30343f72;
     padding: 2rem;
@@ -113,8 +112,12 @@ eventPlannerInfo
 
 .plannerInfoDesc{
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 3fr;
     gap: 1rem;
+}
+
+.plannerInfoDesc p{
+    padding-top: 1rem;
 }
 
 .plannerImage{
@@ -129,12 +132,20 @@ eventPlannerInfo
 
 .plannerAddress{
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 1fr;
     gap: 2rem;
 }
 
 .plannerAddress li{
     list-style: none;
+}
+
+.plannerAddress .edit{
+    text-align: right;
+}
+
+.edit a:hover{
+    background-color: #FFD9DA;
 }
 
 .plannerAddress a{
@@ -146,8 +157,7 @@ eventPlannerInfo
 }
 
 .plannerAdDiv{
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+    display: flex;
     gap: 0.5rem;
 }
 
@@ -155,6 +165,10 @@ eventPlannerInfo
     display: grid;
     grid-template-columns: 1fr;
     gap: 1rem;
+}
+
+.plannerBookings h2{
+    padding: 0.5rem 1.5rem;
 }
 
 .ArtistGallery{
@@ -204,6 +218,18 @@ eventPlannerInfo
 .artistCard{
     box-shadow: 5px 5px 10px 5px #30343f72;
     padding: 2rem;
+    border-radius: 20px;
+}
+
+.pricing{
+    font-weight: 800;
+    font-size: 1.3rem;
+    padding: 0.2rem 0;
+}
+
+.artistCard span{
+    font-weight:normal;
+    font-size: 1rem;
 }
 
 .artistInfoDesc{
@@ -225,6 +251,7 @@ eventPlannerInfo
 .channels{
     display: grid;
     grid-template-columns: 1fr;
+    padding: 1rem 0;
 }
 
 .channels ul{
@@ -260,9 +287,32 @@ eventPlannerInfo
 .artistPerformance ul li a{
     text-decoration: none;
     background-color: #89023E;
-    padding: 0.4rem;
+    padding: 0.4rem 2rem;
     border-radius: 15px;
     color: white;
+}
+
+.artistPerformance .checkCalendar a{
+    background-color: #F37F81;
+    color: black;
+}
+
+.artistPerformance p{
+    padding-bottom: 2rem;
+    border-bottom: 2px solid #FFD9DA;
+}
+
+.checkCalendar{
+    padding-top: 2rem;
+}
+
+.checkCalendar a:hover{
+    background-color: #FFD9DA;  
+}
+
+.bookArtist a:hover{
+    background-color: #FFD9DA;
+    color: black;
 }
 
 /* FOOTER */
@@ -352,7 +402,6 @@ footer{
 .ArtistGallery{
     grid-template-columns: 2fr 4fr;
     padding: 1rem;
-
 }
 
 .ArtistGallery h2{
@@ -369,10 +418,13 @@ footer{
 }
 
 .artistInfo h2{
-    grid-column: 1/-1;
+    grid-column: span 3;
+    text-align: center;
 }
 
-
+.artistPerformance ul{
+    grid-column: 1/2;
+}
 
 
 /* FOOTER */
