--- a/css/signin.css
+++ b/css/signin.css
@@ -100,7 +100,7 @@ main{
 }
 
 .loginLink{
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
     padding-bottom: 0.5rem;
 }
 
@@ -108,6 +108,7 @@ main{
     display: grid;
     grid-template-columns: 1fr 1fr;
     text-align: center;
+    margin: 3rem 3rem 0 3rem;
 }
 
 .loginAccount ul li,
@@ -120,19 +121,24 @@ main{
 .signup ul li a{
     text-decoration: none;
     text-align: center;
+    color: black;
 }
 
 .loginForm{
     display: grid;
     grid-template-columns: 1fr;
     gap: 0.5rem;
+    box-shadow: 5px 5px 10px 5px #30343f72;
+    padding: 1.5rem;
+    border-radius: 20px;
+    margin: 1rem;
 }
 
 .loginButton button{
     background-color: #f37f81;
     color: black;
     border-radius: 15px;
-    padding: 0.3rem 4rem;
+    padding: 0.6rem 4rem;
     border-style: none;
 }
 
@@ -151,14 +157,73 @@ main{
     list-style: none;
 }
 
-.googleButton button, .facebookButton button{
+.forgotPass li a {
+    text-decoration: none;
+}
+
+.email,
+.password {
+    position: relative;
+}
+
+.email input,
+.password input {
+    width: 100%;
+    padding: 1rem 2.5rem 1rem 0.5rem;
+    border: 1px solid black;
+    border-radius: 10px;
+    margin-top: 0.5rem;
+    box-sizing: border-box;
     color: #30343F;
 }
 
-.password input, .email input{
-    color: #30343F;
+.toggle-password {
+    position: absolute;
+    top: 58%;
+    right: 0.75rem;
+    transform: translateY(-50%);
+    cursor: pointer;
 }
 
+.toggle-password i {
+    font-size: 1.2rem;
+}
+
+.forgotPass {
+    margin-top: 0.8rem;
+}
+
+.loginButton,
+.googleButton,
+.facebookButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0.5rem;
+}
+
+.googleButton button,
+.facebookButton button {
+    border-radius: 30px;
+    padding: 0.8rem 4rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.googleButton button{
+    padding: 0.8rem 4.5rem;    
+}
+
+.loginButton button:hover,
+.googleButton button:hover,
+.facebookButton button:hover {
+    background-color: #FFD9DA;
+    color: black;
+}
+
+.better{
+    padding: 1rem 0;
+}
 
 /*FOOTER */
 
