--- a/css/signup-code.css
+++ b/css/signup-code.css
@@ -100,7 +100,7 @@ main{
 }
 
 .createLink{
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
     padding-bottom: 0.5rem;
 }
 
@@ -108,6 +108,7 @@ main{
     display: grid;
     grid-template-columns: 1fr 1fr;
     text-align: center;
+    margin: 3rem 3rem 0 3rem;
 }
 
 .loginAccount ul li{
@@ -118,41 +119,85 @@ main{
 .loginAccount ul li a{
     text-decoration: none;
     text-align: center;
+    color: black;
 }
 
 .createForm{
     display: grid;
     grid-template-columns: 1fr;
     gap: 0.5rem;
+    box-shadow: 5px 5px 10px 5px #30343f72;
+    padding: 1.5rem;
+    border-radius: 20px;
+    margin: 1rem;
+}
+
+.phone-input-container {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+#countrySelect {
+    padding: 1rem 2.5rem 1rem 0.5rem;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+#phoneNumber {
+    width: 100%;
+    padding: 1rem 2.5rem 1rem 0.5rem;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+.inputCode {
+    margin-top: 1rem;
+    margin-right: 0.5rem;
+}
+
+.inputCode input {
+    width: 100%;
+
+    padding: 1rem 0 1rem 0.5rem;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+.sendCodeButton,
+.sendCodeOkButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+.sendCodeOkButton{
+    justify-content: right;
+} 
+
+.sendCodeButton button,
+.sendCodeOkButton button {
+    background-color: #f37f81;
+    border-radius: 30px;
+    border: none;
+    padding: 0.6rem 4rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .sendCodeOkButton button{
-    background-color: #f37f81;
-    color: black;
-    border-radius: 15px;
-    padding: 0.3rem 0.5rem;
-    border-style: none;
-}
-.sendCodeButton button{
-    background-color: #f37f81;
-    color: black;
-    border-radius: 15px;
-    padding: 0.3rem 4rem;
-    border-style: none;
+    padding: 0.3rem 0.8rem;
 }
 
-.sendCodeOkButton button:hover,
-.sendCodeButton button:hover{
+.sendCodeButton button:hover,
+.sendCodeOkButton button:hover {
     background-color: #FFD9DA;
     color: black;
 }
 
-.sendCodeOkButton,
-.sendCodeButton{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 
 /*FOOTER*/
 
