changes on portfolio

--- a/templates/userProfile-template.html
+++ b/templates/userProfile-template.html
@@ -9,7 +9,7 @@
 
             <div class="responseDiv">
                 <button
-                    onclick="veiwPortfolio(this.parentElement.parentElement.parentElement.getAttribute('artist-uid'))">Weiw
+                    onclick="veiwPortfolio(this.parentElement.parentElement.parentElement.getAttribute('artist-uid'))">Veiw
                     Portfolio</button>
             </div>
         </div>
