--- a/css/component-footer-desktop.css
+++ b/css/component-footer-desktop.css
@@ -1,3 +1,7 @@
+@media screen and (min-width:700px) {
+    
+
+
 footer .footerContent {
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
@@ -19,4 +23,5 @@ footer .footerContent .copyright {
     text-align: center;
 
     margin-top: 2rem;
+}
 }
