Search page layout

--- a/css/search.css
+++ b/css/search.css
@@ -1,272 +1,242 @@
 body {
-    font-family: oswald;
-    background-color: #ccc;
+  font-family: oswald;
+  background: linear-gradient(to bottom, #111415, #363a47);
 }
 /* HEADER ================ */
 
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #89023e;
-    padding: 20px;
-    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
-  }
-  .logo {
-    border: 2px dotted;
-    border-radius: 50%;
-    width: 50px;
-    padding: 8px;
-    text-align: center;
-    color: white;
-  }
-  header nav ul {
-    list-style: none;
-    display: flex;
-    gap: 2rem;
-    text-transform: uppercase;
-    font-family: oswald;
-    font-weight: 700;
-    margin: 0;
-    padding: 0;
-    font-size: 16px;
-    
-  }
-  header nav ul li {
-    padding: 4px;
-    border-radius: 8px;
-  }
-  header nav ul a {
+.mainContent,
+.headerContent,
+.footerContent,
+.artist-reviews {
+  max-width: 1000px;
+  margin: auto;
+}
+
+h1,
+h2,
+h3 {
+  font-family: Oswald;
+  font-weight: normal;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+a {
   text-decoration: none;
+  color: black;
+}
+
+header .site-heading img {
+  width: 50px;
+  height: auto;
+}
+.headerContent .navbar {
+  position: relative;
+}
+
+nav {
+  display: none;
+}
+
+nav ul li a:hover {
+  color: var(--accent-clr);
+  border-bottom: 1px solid var(--accent-clr);
+  transition: all 0.5s;
+}
+
+.headerContent .navbar .search a,
+.headerContent .navbar .menuBtn a {
+  color: var(--white-clr);
+}
+
+.headerContent .navbar .menuBtn a {
+  color: var(--accent-clr);
+}
+
+header {
+  border-radius: 0 0 20px 20px;
+
+  padding: 1rem;
+  color: var(--white-clr);
+}
+
+header .headerContent .site-heading {
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: center;
+}
+
+header .headerContent .site-heading img,
+header .headerContent .site-heading h1 {
+  grid-row: 1;
+  grid-column: 1;
+}
+
+header .headerContent .site-heading h1 {
+  margin-left: 3.5rem;
+  align-items: center;
+  font-size: 32px;
+  font-weight: normal;
   color: white;
-  }
+}
+
+.headerContent h2 {
+  font-weight: normal;
+}
+
+.headerContent h2 span {
+  color: var(--accent-clr);
+}
+
+.headerContent {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.headerContent .navbar {
+  display: flex;
+  gap: 1rem;
+  color: #f37f81;
+  justify-content: end;
+  align-items: center;
+}
+
 /* HERO SECTION ========================== */
 
-.hero {
+.search-text h1 {
   display: flex;
-  gap: .5rem;
-  flex-flow: column;
-  padding: 5px;
-  align-content: center;
   justify-content: center;
-  background-image: url("./http://picsum.photos/600/200?random=5");
+  color: #f37f81;
 }
-/* #search {
+.search-container {
+  display: flex;
+  justify-content: center;
   width: 100%;
-  padding: 10px;
+}
+input[type="text"] {
+  border-left: 2px solid white;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  border-radius: 16px 0px 0px 16px;
+  outline: none;
+  padding: 0.5rem;
+  border-right: none;
+  width: -webkit-fill-available;
+}
+
+.search-container a {
+  border-right: 2px solid white;
+  background: white;
+  border-bottom: 2px solid white;
+  border-radius: 0px 16px 16px 0px;
+  border-top: 2px solid white;
+  border-left: none;
+  padding: 0.5rem;
+}
+main {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+/* FOOTER =========================== */
+footer {
+  color: var(--white-clr);
+  padding: 1rem;
+}
+
+.footerContent {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 2rem;
+}
+
+.footerContent a {
+  color: var(--white-clr);
+}
+
+.footerContent .footer-head {
+  text-align: center;
+  grid-column: span 2;
+}
+
+.footerContent .footer-head img {
+  margin: auto;
+  width: 70px;
+}
+
+.footerContent .footer-head .icons ul li {
+  display: inline;
+  margin: 0.3rem;
+}
+
+.footerContent .copyright {
+  grid-column: span 2;
   text-align: center;
 }
-.search-bar-icon {
-  padding: 10px;
-  min-width: 40px;
-}
-.hero-search-bar {
-  border: 1px solid black;
-  width: 50%;
-  height: auto;
-  padding: 10px;
-  font-size: 16px;
-  border-radius: 4px;
-  box-shadow: none;
-  display: flex;
-  flex-flow: row wrap;
-  align-content: center;
-  width: 100%;
-  margin-bottom: 10px
-} */
-/* .hero-search-bar i {
-  
-  position: absolute;
-} */
-.search-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url('http://picsum.photos/600/200?random=014');
-    background-size: cover;
-    min-height: 4rem;
+
+.footerContent .quick-links p,
+.footerContent .contact-us p {
+  font-weight: 700;
 }
 
-.search-bar {
-    display: flex;
-    width: 50%;
-
-    border-color: red;
-    border: 1px solid green;
-    outline: none;
-    border-radius: 2rem;
-    border-right: none;
+.footerContent .quick-links ul li,
+.footerContent .contact-us ul li {
+  margin-bottom: 0.5rem;
 }
 
-.search-bar input {
-    width: 100%;
-    padding: 0.5rem;
-    border: 1px solid #ccc;
-    border-right: none;
-}
-
-.search-bar button {
-    padding: 0.5rem;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    cursor: pointer;
-}
-.pagination {
-  display: inline-block;
-}
-.hero-pagination {
-    display: flex;
-    align-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-
-    background-color: grey;
-    border-radius: 8px;
-    width: fit-content;
-    padding-left: 20px;
-    padding-right: 60px;
-
-
-}
-.pagination a {
-  color: black;
-  float: left;
-  padding: 8px 16px;
-  text-decoration: none;
-}
-.search-bar button {
-    border-left: none;
-    border: 1px solid green;
-    border-radius: 2rem;
-}
-
-/* section =========================== */
-.artist-card {
-    display: flex;
-    justify-content: space-between;
-    /* flex-wrap: row wrap; */
-    /* align-items: center; */
-    background-color: #f9f9f9;
-    width: fit-content;
-    padding: 20px;
-    border-radius: 8px;
-    margin-bottom: 20px;
+@media screen and (min-width: 900px) {
+  .headerContent .navbar .menuBtn {
+    display: none;
   }
-  
-  .artist-card .artist-image {
-    width: auto;
-    align-self: center;
-    justify-self: center;
-    border-radius: 10px;
-    
+
+  nav {
+    display: block;
   }
- 
-  .artist-card .artist-info {
-    padding-right: 20px;
+
+  .headerContent .site-heading,
+  .headerContent .navbar {
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
   }
-  
-  .artist-card .artist-info h3 {
+
+  nav ul li {
+    display: inline;
+  }
+
+  nav ul li a {
+    color: var(--white-clr);
+    margin-left: 1rem;
+  }
+  main {
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
+  footer .footerContent {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
+  }
+
+  footer .footerContent .footer-head {
+    text-align: left;
+    display: grid;
+    gap: 1rem;
+  }
+
+  footer .footerContent .footer-head img {
     margin: 0;
   }
-  
-  .artist-card .artist-info p {
-    margin: 5px 0;
+
+  footer .footerContent .copyright {
+    grid-column: 1 / span 4;
+    text-align: center;
+
+    margin-top: 2rem;
   }
-  .artist-button {
-    padding-bottom: 20px;
-  }
-  .artist-card button {
-    justify-self: end;
-    /* align-self: flex-end; */
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    background-color: #333;
-    color: #fff;
-  }
-  
-  .artist-card .artist-image {
-  
-    justify-self: center;
-    height: 100px;
-    background-color: #ccc;
-    /* border-radius: 50%; */
-  }
-
-.result {
-    display: flex;
-    gap: 5px;
-    padding: 5px;
 }
- 
-.result-info {
-    width: 60%;
-}
-.filter {
-    background-color: #333;
-    color: #fff;
-    padding: 1rem;
-    border-radius: 5px;
-    width: 40%;
-}
-
-.filter h2,
-.filter h3 {
-    margin: 0 0 1rem 0;
-    font-size: 16px;
-    text-transform: uppercase;
-    color: white;
-}
-.filter h2 {
-    width: 3rem;
-    font-size: 3rem;
-}
-.filter a{
-    text-decoration: none;
-    color: white;
-}
-
-.filter a:hover {
-    border: 1px solid #f37f81;
-    border-radius: 0.4rem;
-    background-color: #f37f81;
-}
-.filters ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.filters ul li {
-    margin: 0.5rem 0;
-}
-
-@media screen and (max-width: 760px){
-  .result-info {
-   display: none;
-  }
-  .filter {
-    width: 100%;
-  }
-.filter h2 a {
-    border: 1px solid #f37f81;
-    background-color: #f37f81;
-    
-}
-
-  .filter a{
-    text-decoration: none;
-    color: white;
-    
-}
-
-.filter a:hover {
-    border: 1px solid #f37f81;
-    background-color: #f37f81;
-}
-  }
-
 img {
   width: 100%;
   height: auto;
