--- a/templates/booking-cards-template.html
+++ b/templates/booking-cards-template.html
@@ -1,27 +1,46 @@
-<!-- Request templates -->
-<template id="request-template">
-    <div class="request-item">
-        <div class="request-header">
-            <h2 class="request-name"></h2>
+<!-- Pending templates -->
+<template id="bookingPendingTemplate">
+    <div class="pending-item">
+        <div class="pending-header">
+            <h2 class="pending-name"></h2>
         </div>
-        <div class="request-body">
-            <p><strong>Email:</strong> <span class="request-email"></span></p>
-            <p><strong>Phone:</strong> <span class="request-phone"></span></p>
-            <p><strong>Business Name:</strong> <span class="request-business-name"></span></p>
-            <p><strong>Offer:</strong> <span class="request-offer"></span></p>
-            <p><strong>Address:</strong> <span class="request-address"></span></p>
-            <!-- <p><strong>Request Date:</strong> <span class="request-req-date"></span></p> -->
-            <div class="responseDiv">
-                <button
-                    onclick="bookingComfirmed(this.parentElement.parentElement.parentElement.getAttribute('data-uid'))">Accept</button>
-                <button
-                    onclick="bookingDeclined(this.parentElement.parentElement.parentElement.getAttribute('data-uid'))">Decline</button>
+        <div class="pending-body">
+            <p><strong>Host Name:</strong> <span id="host-name"></span></p>
+            <p><strong>Event Address:</strong> <span id="event-address"></span></p>
+            <p><strong>Event Date:</strong> <span id="event-date"></span></p>
+            <p><strong>Offer:</strong> <span id="request-offer"></span></p>
+            <p><strong>Status:</strong> <span id="request-status"></span></p>
+
+
+            <div class="response-div">
+                <button id="accept-request">Accept</button>
+                <button id="decline-request">Decline</button>
+                    <!-- onclick="bookingComfirmed(this.parentElement.parentElement.parentElement.getAttribute('data-uid'))" -->
+                    <!-- onclick="bookingDeclined(this.parentElement.parentElement.parentElement.getAttribute('data-uid'))" -->
                 <!-- <button class="chat-button">Chat</button> -->
             </div>
         </div>
     </div>
 </template>
-<!--  -->
+
+<!-- Booking templates -->
+<template id="bookingAcceptedTemplate">
+    <div class="booking-item">
+        <div class="booking-header">
+            <h2 class="booking-name"></h2>
+        </div>
+        <div class="booking-body">
+            <p><strong>Host Name:</strong> <span id="host-name"></span></p>
+            <p><strong>Event Address:</strong> <span id="event-address"></span></p>
+            <p><strong>Event Date:</strong> <span id="event-date"></span></p>
+            <p><strong>Offer:</strong> <span id="request-offer"></span></p>
+            <p><strong>Status:</strong> <span id="request-status"></span></p>
+        </div>
+    </div>
+</template>
+
+
+<!-- 
 <template id="request-template-owner">
     <div class="request-item">
         <div class="request-header">
@@ -36,20 +55,4 @@
             <p><strong>Address:</strong> <span class="request-response"></span></p>
         </div>
     </div>
-</template>
-<!-- Booking templates -->
-<template id="booking-template">
-    <div class="booking-item">
-        <div class="booking-header">
-            <h2 class="booking-name"></h2>
-        </div>
-        <div class="booking-body">
-            <p><strong>Email:</strong> <span class="booking-email"></span></p>
-            <p><strong>Phone:</strong> <span class="booking-phone"></span></p>
-            <p><strong>Business Name:</strong> <span class="booking-business-name"></span></p>
-            <p><strong>Offer:</strong> <span class="booking-offer"></span></p>
-            <p><strong>Address:</strong> <span class="booking-address"></span></p>
-            <p><strong>Response:</strong> <span class="booking-response"></span></p>
-        </div>
-    </div>
-</template>
+</template> -->
