--- a/css/account-orgraniser.css
+++ b/css/account-orgraniser.css
@@ -1,22 +1,270 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Oswald:wght@200..700&display=swap');
+
+:root {
+
+    --gradient: linear-gradient(to bottom, #111415, #363a47);
+    --banner-gradient: linear-gradient(to right, #30343F, #7E88A5);
+    --primary-clr: rgb(56, 56, 56);
+    --secondary-clr: #89023E;
+    --accent-clr: #F37F81;
+    --white-clr: white;
+    --blacl-clr: black;
+
+    scroll-behavior: smooth;
+
+}
+
 body {
+    font-family: 'Nunito Sans';
     margin: 0;
-    padding: 0;
+    line-height: 1.4;
 }
 
 main {
-    max-width: 800px;
-    margin: auto;
-    padding: 1rem;
     text-align: center;
 }
+
+
+/* ========= Section 01 */
+.profile-div {
+    box-shadow: grey 2px 2px 10px;
+    border-radius: 25px;
+    padding: 2rem 1rem;
+    max-width: 800px;
+    margin: auto;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    padding: 1rem;
+}
+
+.profile-div article {
+    display: flex;
+    flex-flow: row;
+}
+
+.profile-div article p {
+    text-align: justify;
+}
+
 
 #profile-image {
     width: 150px;
     height: 150px;
     border-radius: 150px;
+    margin-right: .5rem;
 }
 
-.user-data {
+.addressSec {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 1.5rem;
+    margin-right: 2rem;
+    margin-top: 1.5rem;
+}
+
+.addressSec div {
+    display: flex;
+    align-items: center;
+}
+
+.addressSec span {
+    font-weight: bold;
+    padding-right: 5px;
+}
+
+.addressSec button {
+    padding: .4rem 2rem;
+    border-radius: 5px;
+    background-color: var(--accent-clr);
+    color: var(--white-clr);
+    border: none;
+}
+
+.addressSec button:hover {
+    background-color: var(--secondary-clr);
+}
+
+/* ========= Section 02 */
+.feature-banner-div {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    /* max-height: 220px; */
+    max-width: 100%;
+    background-image: var(--banner-gradient);
+    align-items: center;
+    margin: 2rem 0;
+    padding: 0 3rem;
+}
+
+
+
+.feature-banner-div h3 {
+    color: var(--white-clr);
+}
+
+.user-artist-profile {
+    max-width: fit-content;
+    color: var(--white-clr);
+}
+
+.user-artist-profile img {
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    margin: .5rem;
+}
+
+.user-artist-profile p {
+    margin-block-start: 0;
+}
+
+.promoteArtist {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    /* justify-content: space-around; */
+}
+
+/* ============= Section 03 */
+.hiredContent {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin: auto;
+    max-width: 800px;
+    margin-bottom: 5rem;
+}
+
+ul {
+    padding: 0;
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+.artist-descp {
+    border: 1px solid rgb(213, 213, 213);
+    box-shadow: #797979 2px 5px 10px;
+    border-radius: 25px;
+    padding: 1rem;
+    margin-bottom: 1.5rem;
+    max-width: 270px;
+    margin-right: 1rem;
+}
+
+.artist-descp .artist-briefing img {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.artist-descp .artist-briefing {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 1rem;
+    align-items: center;
+}
+
+.artist-descp .icons-grp {
+    text-align: end;
+    color: var(--secondary-clr);
+}
+
+.artist-descp .about-artist ul li {
+    font-family: oswald;
+}
+
+.artist-descp .about-artist ul li span {
+    font-family: 'Nunito Sans';
+}
+
+.artist-descp .artist-perf h3 {
+    font-size: 1.1rem;
+    font-weight: normal;
+}
+
+.artist-descp .artist-perf p {
+    border-bottom: 1px solid var(--accent-clr);
+    padding-bottom: 1rem;
+}
+
+.artist-descp .artist-perf a {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-items: center;
+    background-color: var(--secondary-clr);
+    width: 250px;
+    margin: auto;
+    color: var(--white-clr);
+    padding: .5rem;
+    border-radius: 25px;
+}
+
+.artist-descp .artist-perf a.check {
+    background-color: var(--accent-clr);
+    color: var(--white-clr);
+    padding: .5rem;
+    border-radius: 25px;
+    width: 250px;
+    margin: auto;
+    margin-bottom: 8px;
+    margin-top: 2rem;
+}
+
+.artist-work .images {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: .6rem;
+}
+
+.artist-work .images img {
+    border-radius: 20px;
+}
+
+.artist-work .images img:nth-of-type(1),
+.artist-work .images img:nth-of-type(2) {
+    grid-column: 1/-1;
+}
+
+@media screen and (max-width: 950px) {
+    .hiredContent {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .feature-banner-div h3 {
+        grid-column: 1/-1;
+    }
+
+    .promoteArtist {
+        grid-column: 1/-1;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .hiredContent {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+
+
+}
+
+
+
+/* .user-data {
     display: grid;
     grid-template-columns: 1fr;
 }
@@ -54,4 +302,4 @@ main {
     gap: 0.75rem;
     text-align: start;
     margin-top: 5rem;
-}
+} */
