--- a/css/artist-portfolio.css
+++ b/css/artist-portfolio.css
@@ -597,6 +597,66 @@ main .calendar-main .table-content {
         width: 100%;
     }
 
+    /* Pop-up ----------------- */
+    .popup {
+        display: none; /* Hide the pop-up by default */
+        position: fixed; /* Fixed position to overlay the page */
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.5); /* Semi-transparent background */
+        z-index: 999; /* Higher z-index to overlay everything */
+      }
+      
+      .popup-content {
+        background-color: white;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        max-width: 80%;
+        max-height: 80%;
+        min-width: 50%;
+        overflow: auto;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 20px;
+      }
+      
+      .close {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+        font-size: 24px;
+        cursor: pointer;
+      }
+      .event-data {
+        display: grid;
+        grid-template-columns: 20% 1fr;
+        gap: 0.75rem;
+        text-align: center;
+        margin-top: 5rem;
+    }
+
+    .inputField {
+        border-radius: 10px;
+        height: 40px;
+        border: 1px solid #777;
+    }
+
+    #makeOfferBtn {
+        grid-column: 2/-1;
+        height: 40px;
+        cursor: pointer;
+        border-radius: 10px;
+        padding: 0 2rem;
+        background-color: #89023E;
+        color: white;
+        font-size: 1.25rem;
+        border: none
+    }
+
 
     /* calendar---------------- */
 
